--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,7 +1,7 @@
 /* Add CSS Styling */
 p {
-    background-color: pink;
-    font-family: Verdana, DejaVu Sans, sans-serif;
+    background-color: rgb(255, 192, 203);
+    font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 
 #second {
